change image src

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <input type="radio" name="radio-buttons" id="img-4" />
             <li class="slide-container">
                 <div class="slide-image">
-                    <img class="object-fit-1" src="https://lh3.googleusercontent.com/F5laTGcEISI0QtMFIyEH4OXFExnEmUWE2ZvLrFBiU9xRfvQm7eo_CLFxzaB1XCkN0K9-4wSskM0B-QMCvHdG9Os4hCRmbXl9I6xbY25U9Sns_4zsrRJPJ7F0zt-qLdDyPkz-tDkJBIyfoenS0VRS_gF_y3xni6IB1Z8pHuwmlRUr-dbOzkT-ZSuexmeIdRKChTe-SmtONiaIcgolj31zxu6umt8KU98sJ33JLCNCOo6GxO76IJHo8ttw1VTlOUSUR_xTRSZkE4LDzF0JIaoSrhBUI3srDgPFHBMAdihoLY5Vz2Eqsaw8NqPiQXJ_7y_XZJhzK__J33G0fxUeKSBf_xhPeXjUmZwELEdicLXqEZgcfkWuwOfsAGZcLah83Akb2cXb60LwcZ9qAjiSvZh8YKBuWunLP3wnDsQL0BZCsz4U41O7l_lBQYcy_xi5hrIs1UpXpXDfzrx--WGO2-mNB4drm2AB9GlRK7U_aRDoQMCAahMtN8ziKQKoULAMaWFGkqVnwTHhIBp7YVhYj1JmzfRrKL4CaETW_flX7GkhnH21Y4uEf1gjkImib2X77HaXZPX2ni3hg3xwhqVCC7EvWQCqQoI6Z2nb-N6LbiKQI9Dn5vtwEZl7OjuiqvujvzkdSswyrtcqZqdf3L5salX9sg0p6XSJ7DHhW3lgekvwvMdCkj76bwETw9w8klCBd7wTwxuDd2H2R5PQRRDcdQ=w835-h626-no">
+                    <img class="object-fit-1" src="https://scontent.fceb2-1.fna.fbcdn.net/v/t1.0-9/25659556_1733983276671677_5658612296971808167_n.jpg?_nc_cat=106&_nc_ht=scontent.fceb2-1.fna&oh=599ccfec83985f215cbe7ac92bea3f22&oe=5C6F6DEC">
                     <p>A great friend.</p>
                 </div>
                 
